--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "intervention/image": "^3.11",
-        "goodby/csv": "^1.4",
+        "goodby/csv": "^1.3",
         "stripe/stripe-php": "^17.2"
     },
     "require-dev": {
@@ -68,7 +68,9 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true
-        }
+        },
+        "disable-tls": false,
+        "secure-http": true
     },
     "minimum-stability": "stable",
     "prefer-stable": true
